# dialect

./: .codespellrc  .gitignore  .gitmodules  CONTRIBUTING.md  NEWS.md  README.md  TRANSLATORS.md  com.github.gi-lom.gnabel.json  dialect.doap  gnabel.desktop  gnabel.py  install.sh  meson.build  meson_options.txt  pypi-dependencies.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: CI.yml
.zed/: settings.json
build-aux/flatpak/: app.drey.Dialect.Devel.json  app.drey.Dialect.json  com.github.gi-lom.dialect.json  com.github.gi-lom.gnabel.json  com.github.gi_lom.dialect.Devel.json  com.github.gi_lom.dialect.json  com.github.gi_lom.dialect.json~  pypi-dependencies.json
build-aux/meson/: postinstall.py  provider_postinstall.py  provider_postinstall.sh
data/: app.drey.Dialect.desktop.in.in  app.drey.Dialect.gschema.xml.in  app.drey.Dialect.metainfo.xml.in.in  app.drey.Dialect.service.in  com.github.gi-lom.dialect.desktop  com.github.gi-lom.gnabel.metainfo.xml  com.github.gi_lom.dialect.desktop  com.github.gi_lom.dialect.desktop.in  com.github.gi_lom.dialect.gschema.xml  com.github.gi_lom.dialect.gschema.xml.in  com.github.gi_lom.dialect.metainfo.xml  com.github.gi_lom.dialect.metainfo.xml.in  meson.build
data/resources/: about.blp  about.ui  dialect.gresource.xml  lang-row.blp  lang-row.ui  lang-selector.blp  lang-selector.ui  menu.ui  meson.build  preferences.blp  preferences.ui  provider-preferences.blp  provider-row.blp  providers-list.blp  shortcuts-window.ui  shortcuts.blp  shortcuts.ui  style-dark.css  style.css  theme-switcher.blp  theme-switcher.ui  window.blp  window.ui
data/search_provider/: com.github.gi_lom.dialect.SearchProvider.service.dbus  com.github.gi_lom.dialect.SearchProvider.service.systemd  install_search_provider.sh  meson.build  search_provider.py
dialect/: __builtins__.pyi  about.blp  asyncio.py  define.in  define.pyi  dialect.gresource.xml  dialect.in  lang_selector.py  languages.py  main.py  meson.build  preferences.py  preferences.ui  session.py  settings.py  shortcuts-dialog.blp  shortcuts.blp  shortcuts.py  style.css  theme_switcher.py  utils.py  window.blp  window.py
dialect/providers/: __init__.py  base.py  bing.py  errors.py  google.py  libretrans.py  lingva.py  local.py  microsoft.py  settings.py  soup.py  yandex.py
dialect/providers/modules/: bing.py  deepl.py  google.py  kagi.py  libretrans.py  lingva.py  mint.py  yandex.py
dialect/search_provider/: app.drey.Dialect.SearchProvider.ini  app.drey.Dialect.SearchProvider.service.in  meson.build  search_provider.in
dialect/translators/: __init__.py  basetrans.py  gtrans.py  libretrans.py  lingva.py
dialect/tts/: __init__.py  basetts.py  gtts.py
dialect/widgets/: __init__.py  lang_selector.blp  lang_selector.py  provider_preferences.blp  provider_preferences.py  provider_row.py  providers_list.py  speech_button.blp  speech_button.py  textview.py  theme_switcher.py  voice_button.blp  voice_button.py
po/: .tr.po.swp  LINGUAS  POTFILES  cs.po  de.po  dialect.pot  es.po  eu.po  fa.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  meson.build  nb_NO.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  tr.po
search_provider/: com.github.gi_lom.dialect.SearchProvider.service.in  meson.build  search_provider.in
src/: define.py  dialect.in  dialect.py  gnabel.py  lang_selector.py  main.py  meson.build  preferences.py  search_provider.py  settings.py  window.py
src/search_provider/: com.github.gi_lom.dialect.SearchProvider.ini  search_provider.in
src/translators/: __init__.py  basetrans.py  gtrans.py  libretrans.py  meson.build
src/tts/: __init__.py  basetts.py  gtts.py  meson.build
