# Install desktop
install_data(
  'com.github.gi_lom.dialect.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications')
)

# Install metainfo
install_data(
  'com.github.gi_lom.dialect.metainfo.xml',
  install_dir: join_paths(get_option('datadir'), 'metainfo')
)

# Install colored icon
install_data(
  'com.github.gi_lom.dialect.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

# Install symbolic icon
install_data(
  'com.github.gi_lom.dialect-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)
